--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "core-js": "^3.6.5",
     "vazir-font": "^30.0.0",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.1.2",
