--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.1.2",
     "@capacitor/haptics": "1.0.2",
+    "@capacitor/ios": "^3.1.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.9.1",
     "vazir-font": "^30.0.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
