--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mr-krab",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,7 +20,9 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "firebase": "^8.9.1",
+    "register-service-worker": "^1.7.1",
     "vazir-font": "^30.0.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -30,6 +33,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -42,6 +46,5 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "tailwindcss-rtl": "^0.7.3",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "An Ionic project"
+  }
 }
